# crc32

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  crc32_8h.html  crc32_8hpp.html  crc32__var_8h.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_d40c8f1814d0791df04b0bad5c1e051d.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  modules.html  namespacecrc32.html  namespaces.html  pages.html  project-include-after.cmake  searchdata-v1.js
.github/workflows/: base.yml  linux.yml  macos.yml  windows.yml
OLD/: Crc32Test
cmake/: variables.cmake
example/: CMakeLists.txt  crc32_test_multithreaded.cpp  simple_c_example.c  simple_example.cpp  test_example.cpp
include/crc32/: crc32.h  crc32.hpp  crc32_var.h
source/: crc32.c  crc32.cpp
test/: CMakeLists.txt
test/source/: crc32_bench.cpp  crc32_test.cpp
tools/: dockcross-cmake-builder.sh  graphic.py  ninja-builder.sh
